# churn-mlops

./: .coverage  .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  check_db.py  check_evidently.py  churn_crm.db  mlflow.db  pyproject.toml  requirements-dev.txt  requirements.txt  run_api.py  run_existing_customer_inference.py  run_inference_flow.py  run_monitoring.py  run_training_flow.py  seed_db.py  test_api_endpoints.py  train_sample_model.py
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  mlops-pipeline.yml
configs/: model_config.yaml
dashboard/: crm.py  database.py  requirements.txt
data/processed/: batch_predictions.csv  sample_churn_data.csv
data/raw/: .gitignore  test_dvc.txt.dvc
models/: churn_model.pkl
notebooks/: churn.ipynb
reports/: drift_report.html
src/api/: __init__.py  app.py
src/data/: __init__.py  loader.py  validator.py
src/features/: __init__.py  engineering.py
src/models/: __init__.py  infer.py  predict.py  train.py
src/monitoring/: drift.py
src/utils/: __init__.py  config.py  exceptions.py  logger.py
tests/: __init__.py  conftest.py  run_tests.sh
tests/integration/: test_api.py
tests/unit/: test_data_loader.py  test_data_validator.py  test_feature_engineer.py  test_model_predictor.py  test_model_trainer.py  test_monitoring.py
